--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.1",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.2"
   }
 }
