added web sockets

--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "react-plx": "^2.1.2",
     "react-router-dom": "^6.23.1",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
