--- a/server/package.json
+++ b/server/package.json
@@ -18,10 +18,12 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "googleapis": "^137.1.0",
+    "http": "^0.0.1-security",
     "mongoose": "^8.4.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.2",
-    "razorpay": "^2.9.4"
+    "razorpay": "^2.9.4",
+    "socket.io": "^4.7.5"
   }
 }
