--- a/server/package.json
+++ b/server/package.json
@@ -18,8 +18,10 @@
     "express": "^4.19.2",
     "googleapis": "^137.1.0",
     "http": "^0.0.1-security",
+    "moment": "^2.30.1",
     "mongoose": "^8.4.1",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.2",
     "razorpay": "^2.9.4",
