--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
     "axios": "^1.7.2",
+    "emoji-picker-react": "^4.9.4",
     "file-saver": "^2.0.5",
     "primeicons": "^7.0.0",
     "primereact": "^10.6.6",
