--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.2",
     "razorpay": "^2.9.4",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "wrtc": "^0.4.7"
   }
 }
