--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^8.4.1",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
+    "node-pre-gyp": "^0.17.0",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.2",
     "razorpay": "^2.9.4",
