--- a/client/package.json
+++ b/client/package.json
@@ -16,14 +16,15 @@
     "file-saver": "^2.0.5",
     "primeicons": "^7.0.0",
     "primereact": "^10.6.6",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-plx": "^2.1.2",
     "react-router-dom": "^6.23.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
-    "socket.io-client": "^4.7.5"
+    "socket.io-client": "^4.7.5",
+    "toastify": "^2.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
