--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
+    "@zegocloud/zego-uikit-prebuilt": "^2.5.0",
     "axios": "^1.7.2",
     "emoji-picker-react": "^4.9.4",
     "file-saver": "^2.0.5",
@@ -24,7 +25,8 @@
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.5",
-    "toastify": "^2.0.1"
+    "toastify": "^2.0.1",
+    "web-vitals": "^4.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
