--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-plx": "^2.1.2",
     "react-router-dom": "^6.23.1",
     "react-slick": "^0.30.2",
+    "responsivevoice": "^0.4.1",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.5",
     "toastify": "^2.0.1",
