--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,8 @@
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.5",
     "toastify": "^2.0.1",
-    "web-vitals": "^4.1.1"
+    "web-vitals": "^4.1.1",
+    "zego-express-engine-webrtc": "^3.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
